# backend/src/controllers/course.controller.js
@@ -4,7 +4,8 @@ import {
     servicePostCourse,
     serviceDeleteCourse,
     serviceGetCourseTitle,
-    servicePutCourse
+    servicePutCourse,
+    serviceDeleteCourseByTitle
 } from "../services/coursesService.js";
 
 export const controllerGetAllCourse = async (req, res) => {
@@ -23,13 +24,14 @@ export const controllerGetAllCourse = async (req, res) => {
 
 export const controllerGetAllCourseById = async (req, res) => {
     try {
-        const { id_course } = req.params
-        const data = await serviceGetCourseId(id_course)
+        const { course_id } = req.params
+        const data = await serviceGetCourseId(course_id)
         res.status(200).json(data)
     } catch (error) {
         console.error('Error: ', error.message)
         res.status(404).json({
-            message: 'Error al obtener curso por ID'
+            message: 'Error al obtener curso por ID',
+            error: error.message
         })
     }
 };
@@ -43,7 +45,8 @@ export const controllerGetAllCourseByTitle = async (req, res) => {
     } catch (error) {
         console.error('Error', error.message);
         res.status(404).json({
-            message: 'Error al obtener curso por titulo'
+            message: 'Error al obtener curso por titulo',
+            error: error.message
         })
     }
 };
@@ -63,7 +66,8 @@ export const controllerPostCourse = async (req, res) => {
     } catch (error) {
         console.error('Error: ', error.message);
         res.status(404).json({
-            message: 'Error al crear usuario'
+            message: 'Error al crear usuario',
+            error: error.message
         })
     }
 };
@@ -71,7 +75,7 @@ export const controllerPostCourse = async (req, res) => {
 
 export const controllerPutCourse = async (req, res) => {
     try {
-        const { id_course } = req.params
+        const { course_id } = req.params
         const {
             title,
             description,
@@ -79,12 +83,13 @@ export const controllerPutCourse = async (req, res) => {
             state_id,
             type_id
         } = req.body
-        const data = await servicePutCourse(title, description, duration, state_id, type_id, id_course)
+        const data = await servicePutCourse(title, description, duration, state_id, type_id, course_id)
         res.status(202).json(data)
     } catch (error) {
         console.error('Error: ', error.message);
         res.status(400).json({
-            message: 'Error al actualizar curso'
+            message: 'Error al actualizar curso',
+            error: error.message
         })
     }
 };
@@ -92,8 +97,8 @@ export const controllerPutCourse = async (req, res) => {
 
 export const controllerRemoveCourse = async (req, res) => {
     try {
-        const { id_course } = req.params
-        const data = await serviceDeleteCourse(id_course)
+        const { course_id } = req.params
+        const data = await serviceDeleteCourse(course_id)
         req.status(200).json(data)
     } catch (error) {
         console.error('Error: ', error.message);
@@ -104,3 +109,19 @@ export const controllerRemoveCourse = async (req, res) => {
         
     }
 };
+
+
+export const courseTitleDELETE = async (req, res) => {
+    try {
+        const { title } = req.params
+        const data = await serviceDeleteCourseByTitle(title)
+        res.status(200).json(data)
+    } catch (error) {
+        console.error('no se pudo eliminar el curso');
+        res.status(404).json({
+            message: 'Error no se pudo eliminar el curso, no existe el titulo',
+            error: error.message
+        })
+        
+    }
+}
