# backend/src/models/userQueries.js
@@ -51,6 +51,17 @@ export const putUserid = async (username, email, password, user_id) => {
 };
 
 
+export const putUserEmail = async (username, newEmail, password, email) => {
+    const query = (`UPDATE users
+                        SET username = $1, email = $2, password = $3, updated_at = CURRENT_TIMESTAMP
+                        WHERE email = $4
+                        RETURNING *`);
+    const values = [username, newEmail, password, email]
+    const result = await pool.query(query, values)
+    return result.rows[0]
+};
+
+
 
 // DELETE
 export const deleteUserId = async (user_id) => {
@@ -79,58 +90,5 @@ export const confirmUser = async (email, password) => {
     const values = [email, password]
     const result = await pool.query(query, values)
     return result.rows[0]
-
 }
-
-
-
-
-
-/*
- COURSES 
- GET 
-export const getCourse = async () => {
-    const result = await pool.query(`SELECT * FROM courses`);
-    return result.rows
-}
-
-
-export const getCourseId = async (id_course) => {
-    const query = format(`SELECT * FROM courses
-                        WHERE id_course = %L`, id_course);
-    const result = await pool.query(query);
-    return result.rows[0]
-};
-
-
- POST
-export const postCourse = async (title_course, description, duration, id_statu, id_typeC) => {
-    const query = format(`INSERT INTO courses (title_course, description, duration, id_statu, id_typeC)
-                        VALUES (%L, %L, %L, %L, %L)`, title_course, description, duration, id_statu, id_typeC);
-    const result = await pool.query(query);
-    return result.rows[0]
-};
-
-
- PUT
-export const putCourse = async (id_course, title_course, description, duration, id_statu, id_typeC) => {
-    const query = format(`UPDATE courses SET title_course = %L, description = %L, duration = %L, id_statu = %L, id_typeC = %L
-                        WHERE id_course = %L
-                        RETURNIGN *`, title_course, description, duration, id_statu, id_typeC, id_course);
-    const result = await pool.query(query);
-    return result.rows[0]
-};
-
-
- DELETE 
-export const deleteCourse = async (id_course) => {
-    const query = format(`SELECT FROM courses WHERE id_course = %L`, id_course);
-    const result = await pool.query(query);
-    return result.rows[0]
-};
-
-
-*/
-
-
 
